--- a/rk_1.ipynb
+++ b/rk_1.ipynb
@@ -132,12 +132,19 @@
     "Корреляционная матрица симметрична относительно главной диагонали. На главной диагонали расположены единицы (корреляция признака самого с собой).\n",
     "\n",
     "На основе корреляционной матрицы можно сделать следующие выводы:\n",
-    "- Наибольший вклад в определении (target) наличия сердечных заболеваний вносят следующие признаки:\n",
-    "    - Cp - тип боли в груди\n",
-    "    - Thalach - максимальная достигнутая частота сердечных сокращений\n",
-    "    - Exang - наличие стенокардии, вызванной физической нагрузкой\n",
-    "    - Oldpeak - депрессия ST, вызванная физическими упражнениями относительно отдыха\n",
-    "- С помощью данного датасета не получится построить точную модель машинного обучения из-за отсутствия сильно коррелирующих признаков"
+    "- Наибольший вклад в определении (target) наличия сердечных заболеваний и, соответственно, наиболее информативными при построении моделей машинного обучения являются следующие признаки:\n",
+    "    - Cp (0.435) - тип боли в груди\n",
+    "    - Thalach (0.423) - максимальная достигнутая частота сердечных сокращений\n",
+    "    - Exang (-0.438) - наличие стенокардии, вызванной физической нагрузкой\n",
+    "    - Oldpeak (-0.438) - депрессия ST, вызванная физическими упражнениями относительно отдыха\n",
+    "- Также стоит принять во внимание и средне-коррелирующие признаки:\n",
+    "    - Slope (0.346) - наклон сегмента ST пиковых упражнений\n",
+    "    - Ca (-0.382)- количество крупных сосудов (0-3), окрашенных фторсоскопией\n",
+    "    - Thal (-0.338) - 0 = нормальный; 1 = исправлен дефект; 2 = обратимый дефект\n",
+    "- Стоит заметить, что не все выбранные признаки стоит использовать в построении ММО:\n",
+    "    - Признаки Cp и Exang имеют значительную корреляцию (-0.402). Из этих двух признаков стоит оставить только Cp\n",
+    "\n",
+    "Из описанного выше можно сделать вывод о том, что на основе признаков Cp, Thalach, Oldpeak, Slope, Ca и Thal можно построить модель МО"
    ]
   },
   {
